--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-8">
                     <div class="team-2-item mt-30 animated wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <img src="assets/images/team-member.png" alt="">
+                        <img src="assets/images/team-bg-2.png" alt="">
                         <div class="team-overlay">
                             <div class="item">
                                 <h4 class="title">Alhan Ahmad</h4>
